--- a/Pipfile
+++ b/Pipfile
@@ -7,14 +7,11 @@ name = "pypi"
 
 [dev-packages]
 black = "*"
-pyinstaller = {path = "F:/Workspace/Built Dependency/pyinstaller-4.5/dist/pyinstaller-4.5-py3-none-win_amd64.whl"}
+pyinstaller = "*"
 
 [scripts]
 build = "pipenv run pyinstaller --upx-dir ../upx-3.96-win64 -n jpzip --add-data 7z;7z --clean jpzip.py"
 dirty-build = "pipenv run pyinstaller --upx-dir ../upx-3.96-win64 -n jpzip --add-data 7z;7z jpzip.py"
 
 [requires]
-python_version = "3.8"
-
-[pipenv]
-allow_prereleases = true
+python_version = "3.11"
